# molgeom-examples

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
files/: 1hvc.xyz  C14N2H8S4.xyz  Ca8B20H8O40Cl4.cif  H2O.inp  H2O_with_Tv.com  POSCAR_H2O
files/inputs/: C8H15F6N2P.cif  Cr2C4H4O8.xyz  H2O.cif  H2O.xyz  graphite_3layers.gjf
files/outputs/: H2O_written.cif  H2O_written.com  H2O_written.inp  H2O_written.vasp  H2O_written.xyz
notebooks/: tutorial1.ipynb  tutorial2.ipynb
notebooks/.ipynb_checkpoints/: tutorial1-checkpoint.ipynb
utils/: viewer_utils.py
