[project]
name = "molgeom-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "molgeom",
    "py3dmol>=2.4.2",
]

[tool.uv.sources]
molgeom = { git = "https://github.com/sio-salt/molgeom", rev = "main" }
