[project]
name = "molgeom-examples"
version = "0.2.0"
description = "molgeom examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "molgeom",
    "py3dmol>=2.4.2",
]

[tool.uv.sources]
molgeom = { git = "https://github.com/sio-salt/molgeom", rev = "main" }
